fixed header not showing

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,4 @@
-.header {
+#header {
     font-family: Verdana;
     font-weight: normal;
     font-size: 50px;
